--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -27,6 +27,12 @@ apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
 apply plugin: 'com.google.gms.google-services'
 
 android {
+   defaultConfig {
+        minSdkVersion 15 
+        targetSdkVersion 28
+        multiDexEnabled true
+    }
+    
     compileSdkVersion 29
 
     sourceSets {
@@ -60,8 +66,10 @@ flutter {
 }
 
 dependencies {
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation platform('com.google.firebase:firebase-bom:26.2.0')
-    implementation 'com.google.firebase:firebase-auth-ktx'
-
+   implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+   implementation platform('com.google.firebase:firebase-bom:26.2.0')
+   implementation 'com.google.firebase:firebase-auth-ktx'  
+   def multidex_version = "2.0.1"
+   implementation "androidx.multidex:multidex:$multidex_version"
+   
 }
