--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,9 +54,8 @@ flutter:
   # the material Icons class.
   uses-material-design: true
 
-assets:
-  - images/
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
