--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,6 +65,12 @@ flutter:
   assets:
     - assets/images/welone.png
     - assets/images/weltwo.png
+    - assets/images/google.png
+    - assets/images/forgot_password_girl.png
+    - assets/images/facebook.png
+    - assets/images/twitter.png
+    - assets/images/welthree.png
+
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
