--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   dotted_border: ^1.0.7
   image_picker: ^0.6.7+22
   permission_handler: ^5.1.0+2
+  font_awesome_flutter: ^8.11.0
 
 
 
@@ -70,6 +71,7 @@ flutter:
     - assets/images/facebook.png
     - assets/images/twitter.png
     - assets/images/welthree.png
+    - assets/images/makedeed.png
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
