--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
 
     <application
         android:name="io.flutter.app.FlutterApplication"
-        android:label="swapper"
+        android:label="Swapper"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
