--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   cloud_firestore:
   shared_preferences:
   auto_size_text: ^2.1.0
+  flutter_spinkit: ^5.0.0
   dotted_border: ^1.0.7
   image_picker: ^0.6.7+22
   permission_handler: ^5.1.0+2
