--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   image_picker: ^0.7.4
   adobe_xd: ^1.1.0+1
   flutter_svg: ^0.19.3
+  google_maps_flutter: ^2.0.3
   permission_handler: ^6.1.1
   font_awesome_flutter: ^8.11.0
   flutter_tindercard: ^0.2.0
