--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,22 +24,18 @@ dependencies:
   flutter:
     sdk: flutter
   firebase_auth:
-  firebase_core: ^1.0.2
-  google_sign_in: ^4.5.9
+  firebase_core: 
+  google_sign_in: 
   provider:
-  geolocator: ^7.0.1
-  geocoder: ^0.2.1
-  catcher: 
+  geolocator:
+  geocoder:
   convex_bottom_bar: ^3.0.0
   firebase_storage:
   cloud_firestore:
   shared_preferences:
-  auto_size_text: ^2.1.0
   flutter_spinkit: ^5.0.0
   dotted_border: ^1.0.7
   image_picker: ^0.7.4
-  adobe_xd: ^1.1.0+1
-  flutter_svg: ^0.19.3
   google_maps_flutter:
   permission_handler: ^6.1.1
   font_awesome_flutter: ^8.11.0
@@ -49,8 +45,8 @@ dependencies:
   flutter_bloc:
   meta: 
   equatable:
+  flutter_launcher_icons:
   rxdart: 
-  file_picker:
   flutter_datetime_picker: 
   extended_image: 
   timeago: 
